[project]
name = "BladeX"
version = "0.1.0"
description = "Python Blade Morphing"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Marco Tezzele", email = "marcotez@gmail.com" },
    { name = "Mahmoud Gadalla", email = "gadalla.mah@gmail.com" }
]
keywords = ["blade-generation", "propeller", "iges", "procal"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx_rtd_theme"
]
test = [
    "pytest",
    "pytest-cov"
]

[project.urls]
Homepage = "https://github.com/mathLab/BladeX"
Documentation = "https://mathlab.github.io/BladeX/"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["bladex*"]

